Images aren't stretched. Fixed half of the issue when scrolling while the video is playing by completely gutting the <video> element on unselect. Added spinner.

--- a/WebContent/css/editor.css
+++ b/WebContent/css/editor.css
@@ -53,12 +53,12 @@
 	border: 1px solid green;
 	background-color: #FEFEFE;
 	text-align: center;
+	overflow: hidden;
 }
 
 .video-image {
 	border: 1px solid gray;
-	width: 40px;
-	height: 30px;
+	height: 40px;
 }
 
 .video-name {
