--- a/WebContent/css/projects.css
+++ b/WebContent/css/projects.css
@@ -53,8 +53,7 @@
 
 .project-image {
 	border: 1px solid gray;
-	width: 40px;
-	height: 30px;
+	height: 40px;
 }
 
 .project-name {
